; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/phy/extr_phy_lcn.c_wlc_lcnphy_get_tx_locc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/brcm80211/brcmsmac/phy/extr_phy_lcn.c_wlc_lcnphy_get_tx_locc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_phy = type { i32 }
%struct.phytbl_info = type { i32, i32, i32, i32*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wlc_lcnphy_get_tx_locc(%struct.brcms_phy* %0) #0 {
  %2 = alloca %struct.brcms_phy*, align 8
  %3 = alloca %struct.phytbl_info, align 8
  %4 = alloca i32, align 4
  store %struct.brcms_phy* %0, %struct.brcms_phy** %2, align 8
  %5 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %3, i32 0, i32 4
  store i64 0, i64* %5, align 8
  %6 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %3, i32 0, i32 0
  store i32 16, i32* %6, align 8
  %7 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %3, i32 0, i32 3
  store i32* %4, i32** %7, align 8
  %8 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %3, i32 0, i32 1
  store i32 1, i32* %8, align 4
  %9 = getelementptr inbounds %struct.phytbl_info, %struct.phytbl_info* %3, i32 0, i32 2
  store i32 85, i32* %9, align 8
  %10 = load %struct.brcms_phy*, %struct.brcms_phy** %2, align 8
  %11 = call i32 @wlc_lcnphy_read_table(%struct.brcms_phy* %10, %struct.phytbl_info* %3)
  %12 = load i32, i32* %4, align 4
  ret i32 %12
}

declare dso_local i32 @wlc_lcnphy_read_table(%struct.brcms_phy*, %struct.phytbl_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
